# lcc

./: .gitignore  Cargo.toml
src/: asmgen.rs  code_emit.rs  codegen.rs  common.rs  lexer.rs  lib.rs  main.rs  parser.rs  register.rs  tacky.rs  tacky_emit.rs
src/codegen/x86_64/: asmgen.rs  codegen.rs  errors.rs  mod.rs  register.rs  types.rs
src/lexer/: lexer.rs
src/parser/: errors.rs  mod.rs  parser.rs  types.rs
src/parser/output/: function_body_with_subblocks.s.snap  simple_return_with_expression.s.snap
src/semantic_analysis/: desugaring_verifier.rs  identifier_resolution.rs  loop_label_verifier.rs  loop_labeling.rs  mod.rs  typechecking.rs  unique_identifier_verifier.rs
src/snapshots/: parse_expression_addition_is_left_associative.snap  parse_expression_addition_with_negated_operand.snap  parse_expression_bitwise_and_is_left_associative.snap  parse_expression_division_has_higher_precedence_than_addition.snap  parse_expression_left_shift_is_left_associative.snap  parse_expression_multiple_nested_parentheses.snap  parse_expression_operation_with_complement_operator.snap  parse_expression_parentheses_override_precedence.snap  parse_expression_simple_bitwise_or.snap  parse_expression_simple_division.snap  parse_expression_simple_left_shift.snap  parse_expression_simple_right_shift.snap  parse_expression_unary_negate_binary_operator_expression.snap
src/snapshots/parsing/: expr_bitwise_or_is_left_associative.snap  expr_division_is_left_associative.snap  (+10 more)
src/tacky/: errors.rs  mod.rs  tacky.rs  types.rs
tests/: .gitignore  e2e_return_code_check.rs
(+315 files in other folders)
