[package]
name = "lcc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display", "add"] }
indoc = "2.0.6"
insta = { version = "1.43.1", features = ["json", "yaml"] }
once_cell = "1.21.3"
rstest = "0.25.0"
thiserror = "2.0.12"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"

